@@ -7,6 +7,7 @@ Date: 00. 00. 0000
   Bugfixes:
     - Fixed that opening another mod's interface while FP is open could crash
     - Fixed that requesting machines and modules would crash in certain modded situations
+    - Fixed the beacon selector not working properly when the game is paused
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.7
